<resources>
    <string name="app_name">YouTube</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="videos_count">%d video series</string>
    <string name="txt_for">Dowland</string>
    <string name="how_displacement_instability_uncertainty_affect_children">HOW DISPLACEMENT INSTABILITY - UNCERTAINTY AFFECT CHILDREN</string>
    <string name="tv_sh">Share</string>
    <string name="txt_desk">Refugee children often have suffered many losses and because of that, they are grieving these losses they\'re grieving the loss of their home, the loss of the life they knew, the places where they were used to be and that they loved to go. The loss of their friends, and certainly the loss of their family members and loved ones. So naturally they\'re going to have sadness.</string>
    <string name="escho_raz">Try Again</string>
    <string name="vid_ser">video series</string>
    <string name="back">Back</string>
    <string name="playlist">Playlist</string>
    <string name="txt_for_item_video">HOW DISPLACEMENT INSTABILITY - UNCERTAINTY AFFECT</string>
    <string name="emotional_well_being_healing_practices_for_children">Emotional Well-being , Healing Practices for Children</string>
    <string name="test_text">Ya gey</string>
    <string name="txt_pl">playlist</string>

</resources>