<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <WebView
                    android:id="@+id/web_youtube_player"
                    android:layout_marginTop="58dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.exoplayer2.ui.PlayerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/video_player"
                    android:layout_centerInParent="true"/>


            </RelativeLayout>-->

            <androidx.appcompat.widget.Toolbar

                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                >
                <com.google.android.material.button.MaterialButton
                    app:iconGravity="start"
                    android:id="@+id/btn_back"
                    app:icon="@drawable/arrow"
                    app:iconTint="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="22sp"
                    android:textColor="@color/Red"
                    android:background="@android:color/transparent"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist"
                    android:textColor="@color/red"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="40dp"/>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <com.google.android.material.textview.MaterialTextView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:id="@+id/tv_title_video"
            android:layout_height="wrap_content"
            android:text="@string/how_displacement_instability_uncertainty_affect_children"
            android:textSize="24sp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:drawableEnd="@drawable/icon_share"
            android:layout_width="120dp"
            android:paddingEnd="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_for_btn_share"
            android:text="@string/tv_sh"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_video"
            android:layout_marginBottom="340dp"
            android:id="@+id/btn_sh"
            tools:ignore="RtlSymmetry" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/btn_sh"
            app:layout_constraintBottom_toBottomOf="parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_desk"
                android:textSize="24sp"
                android:id="@+id/txt_desc"/>

        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>




</com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout><!--
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.video.VideoFragment">

    <WebView
        android:background="@drawable/ic_launcher_background"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/web_youtube_player"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:id="@+id/tv_title_video"
        android:layout_height="wrap_content"
        android:text="@string/how_displacement_instability_uncertainty_affect_children"
        app:layout_constraintTop_toBottomOf="@id/web_youtube_player"
        android:textSize="24sp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:drawableEnd="@drawable/icon_share"
        android:layout_width="120dp"
        android:paddingEnd="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_for_btn_share"
        android:text="@string/tv_sh"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_video"
        app:layout_constraintTop_toBottomOf="@id/tv_title_video"
        android:layout_marginBottom="340dp"
        android:id="@+id/btn_sh"
        tools:ignore="RtlSymmetry" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_sh"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desk"
            android:textSize="24sp"
            android:id="@+id/txt_desc"/>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>-->
